traces/bug_361.txt
src/medit/inout_morice.c:1049: error: DEAD_STORE
  The value written to &k (type int) is never used.
Showing all 1 steps of the trace


src/medit/inout_morice.c:1049:7: Write of unused value
1047.         assert(mesh->extra->t);
1048.   
1049.         k=1;
              ^
1050.   
1051.         for (k=1; k<=mesh->ntg; k++) {
